# agent-studio

./: .gitignore  BUG_FIX_MESSAGE_ORDERING.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  README.zh-CN.md  REFACTORING_PLAN.md  REFACTORING_STAGE1_SUMMARY.md  REFACTORING_STAGE4_PHASE2_SUMMARY.md  REFACTORING_STAGE4_PHASE3_4_SUMMARY.md  REFACTORING_STAGE4_SUMMARY.md  config.example.json  config.json  config.test.json  docks-agentx.json  workspace-config.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/agentx-acp-ui/: Cargo.toml  README.md
crates/agentx-acp-ui/examples/: acp_ui_story.rs
crates/agentx-acp-ui/src/: agent_message.rs  agent_thought.rs  agent_todo_list.rs  diff_summary.rs  diff_view.rs  lib.rs  message_stream.rs  permission_request.rs  tool_call_item.rs  user_message.rs  utils.rs
crates/agentx-acp-ui/stories/: acp_ui_story.rs
crates/agentx-agent/: Cargo.toml
crates/agentx-agent/src/: client.rs  lib.rs
crates/agentx-agent/src/nodejs/: detector.rs  installer_hint.rs  mod.rs
crates/agentx-event-bus/: Cargo.toml
crates/agentx-event-bus/src/: batching.rs  core.rs  hub.rs  lib.rs
crates/agentx-services/: Cargo.toml
crates/agentx-services/src/: agent_config_service.rs  agent_service.rs  ai_service.rs  config_watcher.rs  lib.rs  message_service.rs  persistence_service.rs  workspace_service.rs
crates/agentx-types/: Cargo.toml
crates/agentx-types/src/: config.rs  config_manager.rs  events.rs  lib.rs  session.rs
crates/agentx-types/src/schemas/: conversation.rs  mod.rs  workspace.rs
crates/git-worktree-manager/: Cargo.toml
crates/git-worktree-manager/examples/: worktree_manager.rs
crates/git-worktree-manager/src/: lib.rs
docs/: AGENT_MESSAGE.md  README.md  TOOL_CALL_ITEM.md  USER_MESSAGE.md  available_commands_api.md  available_commands_examples.rs  slash_command_autocomplete.md
examples/: test_mcp_config.rs
locales/: en.yml  zh-CN.yml
sessions/: 9ad43a1b-8081-48ae-8d32-fcd3570857cb.jsonl
src/: acp_client.rs  assets.rs  chat_input.rs  conversation.rs  conversation_acp.rs  gui_client.rs  i18n.rs  lib.rs  main.rs  permission_bus.rs  settings_window.rs  task_list.rs  task_schema.rs  task_turn_view.rs  title_bar.rs  welcome_panel.rs  workspace.rs
src/app/: actions.rs  app_menus.rs  app_state.rs  menu.rs  mod.rs  service_registry.rs  system_tray.rs  themes.rs  title_bar.rs
src/components/: agent_message.rs  chat_input_box.rs  diff_summary.rs  file_picker.rs  input_suggestion.rs  mod.rs  permission_request.rs  tool_call_item.rs  user_message.rs
src/core/: config.rs  config_manager.rs  mod.rs
src/core/agent/: client.rs  mod.rs
src/core/event_bus/: agent_config_bus.rs  code_selection_bus.rs  code_selection_helper.rs  mod.rs  session_bus.rs
src/core/nodejs/: detector.rs  error.rs  mod.rs
src/core/services/: agent_config_service.rs  agent_service.rs  ai_service.rs  config_watcher.rs  message_service.rs  mod.rs  persistence_service.rs
src/core/updater/: checker.rs
src/fixtures/: mock_conversation.json
src/panels/: chat_input.rs  code_editor.rs  conversation.rs  conversation_acp.rs  dock_panel.rs  mod.rs  session_manager.rs  settings_panel.rs  settings_window.rs  task_list.rs  terminal_panel.rs  tool_call_detail_panel.rs  welcome_panel.rs
src/panels/code_editor/: panel.rs
src/panels/conversation/: components.rs  helpers.rs  mod.rs  panel.rs  rendered_item.rs  types.rs  update_state_manager.rs
src/panels/conversation_acp/: panel.rs
src/panels/settings_panel/: about_page.rs  general_page.rs  model_page.rs  network_page.rs  panel.rs  update_page.rs
src/panels/task_panel/: panel.rs
src/reqwest_client/: http_client_tls.rs  reqwest_client.rs
src/schemas/: conversation_schema.rs  mod.rs  workspace_schema.rs
src/utils/: clipboard.rs  mod.rs  time.rs
src/workspace/: actions.rs  mod.rs  startup.rs
src/workspace/actions/: config_actions.rs  mod.rs  panel_actions.rs  session_actions.rs
src/workspace/startup/: mod.rs  render.rs  state.rs  steps.rs
tests/: mcp_config_test.rs
