[package]
name = "agentx"
version = "0.5.0"
edition = "2024"
description = "An Agent Studio - A full-featured desktop AI agent studio built with GPUI"
license = "Apache-2.0"
publish = false
authors = []
readme = "README.md"

[[bin]]
name = "agentx"
path = "src/main.rs"

[features]
default = ["unstable"]
unstable = []

[dependencies]
# Core GPUI framework
gpui = { git = "https://github.com/zed-industries/zed" }
# gpui-component = { git = "https://github.com/longbridge/gpui-component", version = "0.5.0" }
gpui-component = { path = "../crates/ui" }

# Agent communication
agent-client-protocol = {version = "0.9.2" , features = ["unstable"] }

# Async runtime
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "process", "fs", "io-util"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
async-trait = "0.1.89"
smol = "2"

# HTTP client (embedded)
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
rustls = "0.23.26"
rustls-platform-verifier = "0.5.0"
bytes = "1.0"
futures = "0.3"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"

# Error handling and logging
anyhow = "1"
log = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Language support
tree-sitter-navi = "0.2.2"
color-lsp = "0.2.0"
lsp-types = { version = "0.97.0", features = ["proposed"] }

# Utilities
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
autocorrect = "2.14.2"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
uuid = { version = "1.11", features = ["v4"] }
rust-i18n = "3"
similar = { version = "2.6", features = ["text"] }
regex = "1"
base64 = "0.22"
which = "7.0"
image = "0.25"

[lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
