[package]
name = "agentx"
version = "0.5.0"
edition = "2024"
description = "An Agent Studio - A full-featured desktop AI agent studio built with GPUI"
license = "Apache-2.0"
publish = false
authors = ["AgentX Team <hi@agentx.plus>"]
readme = "README.md"

[package.metadata.bundle]
name = "AgentX"
identifier = "plus.agentx.app"
icon = ["assets/logo1024x1024@2x.png", "assets/logo.ico"]
version = "0.5.0"
copyright = "Copyright (c) 2025 AgentX. All rights reserved."
category = "Developer Tool"
short_description = "AI Agent Studio"
long_description = "A full-featured desktop AI agent studio built with GPUI Component, featuring real-time agent communication, code editing, and multi-session management."

[package.metadata.bundle.windows]
icon = ["assets/logo.ico"]

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"

[[bin]]
name = "agentx"
path = "src/main.rs"

[features]
default = ["unstable"]
unstable = []

[dependencies]
# Core GPUI framework
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/sxhxliang/gpui-component", branch = "dev" }
gpui_term = { git = "https://github.com/sxhxliang/gpui-term" }
# gpui-component = { path = "../crates/ui" }

# Agent communication
agent-client-protocol = {version = "0.9.3" , features = ["unstable"] }

# Async runtime
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "process", "fs", "io-util"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
async-trait = "0.1.89"
smol = "2"

# HTTP client (embedded)
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
rustls = "0.23.26"
rustls-platform-verifier = "0.5.0"
bytes = "1.0"
futures = "0.3"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"

# Error handling and logging
anyhow = "1"
log = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Language support
tree-sitter-navi = "0.2.2"
color-lsp = "0.2.0"
lsp-types = { version = "0.97.0", features = ["proposed"] }

# Utilities
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
autocorrect = "2.14.2"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
uuid = { version = "1.11", features = ["v4"] }
rust-i18n = "3"
similar = { version = "2.6", features = ["text"] }
regex = "1"
base64 = "0.22"
which = "7.0"
image = "0.25"
dirs = "6.0"

# System tray
tray-icon = "0.19"

# Linux-only: GTK for tray icon initialization
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
# Pin macOS font stack to avoid core-graphics version skew with gpui/zed-font-kit.
core-text = "=21.0.0"
core-graphics = "=0.24.0"

[lints.rust]
# Allow warnings for code under development
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "allow"
type_complexity = "allow"
needless_update = "allow"
option_map_unit_fn = "allow"
too_many_arguments = "allow"
mutable_key_type = "allow"

[profile.dev]
opt-level = 1            # 轻量优化，平衡编译速度和文件大小
codegen-units = 16       # 保持快速编译
debug = "limited"        # 有限的调试信息
split-debuginfo = "unpacked"
strip = "debuginfo"      # 移除调试信息但保留符号表

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[profile.release]
opt-level = "z"          # 优化目标为大小 (size optimization)
lto = "fat"              # 完整的链接时优化 (full LTO)
codegen-units = 1        # 最小化编译单元以获得最佳优化
strip = true             # 自动移除符号和调试信息
panic = "abort"          # 使用 abort 代替 unwind，减少二进制大小
