[workspace]
members = [
    ".",
    "crates/agentx-acp-ui",
    "crates/agentx-agent",
    "crates/agentx-event-bus",
    "crates/agentx-services",
    "crates/agentx-types",
    "crates/git-worktree-manager",
]
resolver = "2"

[workspace.dependencies]
agent-client-protocol = { version = "0.10", features = ["unstable"] }
agentx-agent = { path = "crates/agentx-agent" }
agentx-acp-ui = { path = "crates/agentx-acp-ui" }
agentx-event-bus = { path = "crates/agentx-event-bus" }
agentx-services = { path = "crates/agentx-services" }
agentx-types = { path = "crates/agentx-types" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
gpui = "0.2.2"
gpui-component = "0.5.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
similar = { version = "2.6", features = ["text"] }
smol = "2"
tokio = { version = "1.48.0" }
tokio-util = { version = "0.7.17", features = ["compat"] }
uuid = { version = "1.11", features = ["v4"] }
which = "8"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[workspace.lints.clippy]
style = { level = "allow", priority = -1 }
module_inception = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
publish = false
authors = ["AgentX Team <hi@agentx.plus>"]


[package]
name = "agentx"
version.workspace = true
edition.workspace = true
description = "An Agent Studio - A full-featured desktop AI agent studio built with GPUI"
license.workspace = true
publish.workspace = true
authors.workspace = true
readme = "README.md"

[package.metadata.bundle]
name = "AgentX"
identifier = "plus.agentx.app"
icon = ["assets/logo1024x1024@2x.png", "assets/logo.ico"]
version = "0.3.0"
copyright = "Copyright (c) 2025 AgentX. All rights reserved."
category = "Developer Tool"
short_description = "AI Agent Studio"
long_description = "A full-featured desktop AI agent studio built with GPUI Component, featuring real-time agent communication, code editing, and multi-session management."

[package.metadata.bundle.windows]
icon = ["assets/logo.ico"]

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"

[[bin]]
name = "agentx"
path = "src/main.rs"

[features]
default = ["unstable"]
unstable = []

[dependencies]
agent-client-protocol = { workspace = true }
agentx-acp-ui = { workspace = true }
agentx-agent = { workspace = true, features = ["unstable"] }
agentx-event-bus = { workspace = true }
agentx-services = { workspace = true }
agentx-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
autocorrect = "2.14"
base64 = "0.22"
bytes = "1.0"
chrono = { workspace = true }
color-lsp = "0.2"
dirs = { workspace = true }
futures = "0.3"
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui_term = { path = "vendor/gpui-term/crates/gpui_term" }
image = "0.25"
log = { workspace = true }
lsp-types = { version = "0.97", features = ["proposed"] }
regex = "1"
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
rfd = "0.17"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
rust-i18n = "3"
rustls = "0.23"
rustls-platform-verifier = "0.6"
serde = { workspace = true }
serde_json.workspace = true
similar = { workspace = true }
smol = { workspace = true }
sys-locale = "0.3"
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "process",
    "fs",
    "io-util",
] }
tokio-util = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.21"
tree-sitter-navi = "0.2.2"
uuid = { workspace = true }
which = { workspace = true }

# Linux-only: GTK for tray icon initialization
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
# Pin macOS font stack to avoid core-graphics version skew with gpui/zed-font-kit.
core-graphics = "=0.24.0"
core-text = "=21.0.0"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "allow"
type_complexity = "allow"
needless_update = "allow"
option_map_unit_fn = "allow"
too_many_arguments = "allow"
mutable_key_type = "allow"

[profile.dev]
opt-level = 1                # 轻量优化，平衡编译速度和文件大小
codegen-units = 16           # 保持快速编译
debug = "limited"            # 有限的调试信息
split-debuginfo = "unpacked"
strip = "debuginfo"          # 移除调试信息但保留符号表

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[profile.release]
opt-level = "z"   # 优化目标为大小 (size optimization)
lto = "fat"       # 完整的链接时优化 (full LTO)
codegen-units = 1 # 最小化编译单元以获得最佳优化
strip = true      # 自动移除符号和调试信息
panic = "abort"   # 使用 abort 代替 unwind，减少二进制大小
