[package]
name = "agentx-acp-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[dev-dependencies]
anyhow = "1"
gpui-component-assets = "0.5.1"

[lints.clippy]
style = { level = "allow", priority = -1 }
module_inception = "allow"
