[package]
name = "agentx-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
unstable = []
test-support = []

[lints]
workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
agentx-event-bus = { workspace = true }
agentx-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
smol = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "process",
    "fs",
    "io-util",
    "sync",
    "time",
    "macros",
] }
tokio-util = { workspace = true }
which = { workspace = true }
