[package]
name = "agentx-services"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
agentx-agent = { workspace = true }
agentx-event-bus = { workspace = true }
agentx-types = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
notify = "8"
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
smol = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "process",
    "fs",
    "io-util",
    "sync",
    "time",
] }
which = { workspace = true }

[dev-dependencies]
agentx-agent = { workspace = true, features = ["test-support"] }
